Updated Direct Dependencies
Issue-ID: HOLMES-633
Signed-off-by: Guangrong Fu <fu.guangrong@zte.com.cn>
Change-Id: Ibf6e1fd9c93c64bc22dc346d85df69a88f40976e